add video tagger

--- a/_gatsby/slices/_gatsby-scripts-1.html
+++ b/_gatsby/slices/_gatsby-scripts-1.html
@@ -2,6 +2,6 @@
           <script
             id="gatsby-chunk-mapping"
           >
-            window.___chunkMapping="{\"app\":[\"/app-13290177b16220eed849.js\"],\"component---src-pages-404-tsx\":[\"/component---src-pages-404-tsx-58a1552d929950aa7e92.js\"],\"component---src-pages-index-tsx\":[\"/component---src-pages-index-tsx-4cfd7c4918bd009cea1b.js\"]}";
+            window.___chunkMapping="{\"app\":[\"/app-d4cae528ec2b063554f4.js\"],\"component---src-pages-404-tsx\":[\"/component---src-pages-404-tsx-61505db8ca65c54b6c4c.js\"],\"component---src-pages-dataset-lab-tsx\":[\"/component---src-pages-dataset-lab-tsx-fd866e23e65923df6326.js\"],\"component---src-pages-index-tsx\":[\"/component---src-pages-index-tsx-8b934522ca584d0b2a9e.js\"]}";
           </script>
-        <script>window.___webpackCompilationHash="099d721a6dbbfc725cd9";</script><script src="/webpack-runtime-8f306ee9ef1556c1b2d1.js" async></script><script src="/framework-2bc9148a39c5e1cbfa8e.js" async></script><script src="/app-13290177b16220eed849.js" async></script>
+        <script>window.___webpackCompilationHash="2125c3fab31f8f968fcd";</script><script src="/webpack-runtime-461142b2e736b9a347b3.js" async></script><script src="/framework-2bc9148a39c5e1cbfa8e.js" async></script><script src="/app-d4cae528ec2b063554f4.js" async></script>
